RESOLVED FIXED276657
B3LowerInt64 doesn't always observe B3 value order
https://bugs.webkit.org/show_bug.cgi?id=276657
Summary B3LowerInt64 doesn't always observe B3 value order
Angelos Oikonomopoulos
Reported 2024-07-16 07:20:02 PDT
Values need to be emitted in the write order relative to the synthetic instructions. This is covered up by DCE in simple testcases.
Attachments
Angelos Oikonomopoulos
Comment 1 2024-07-16 07:27:39 PDT
EWS
Comment 2 2024-07-16 13:19:18 PDT
Committed 281015@main (ce8bf8ee04d0): <https://commits.webkit.org/281015@main> Reviewed commits have been landed. Closing PR #30863 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-16 13:20:17 PDT
Note You need to log in before you can comment on or make changes to this bug.