B3LowerInt64 doesn't always observe B3 value order https://bugs.webkit.org/show_bug.cgi?id=276657

Reviewed by Justin Michaud.

Emit references to the high/low parts of Int64 values after the
previously-inserted synthetic values.

While here, add the references to synthetic values consumed/produced by
BitwiseCast (necessary even when we don't actually lower it here).

A couple more minor bugfixes.

* Source/JavaScriptCore/b3/B3LowerInt64.cpp:

Canonical link: https://commits.webkit.org/281015@main